--- a/src/main/resources/templates/articles/index.mustache
+++ b/src/main/resources/templates/articles/index.mustache
@@ -1,4 +1,5 @@
 {{>layouts/header}}
+
 <table class="table">
     <thead>
     <tr>
@@ -11,10 +12,13 @@
     {{#articleList}}
     <tr>
         <th>{{id}}</th>
-        <td>{{title}}</td>
+        <td><a href="/articles/{{id}}">{{title}}</a></td>
         <td>{{content}}</td>
     </tr>
     {{/articleList}}
     </tbody>
 </table>
+
+<a href="/articles/new">New Article</a>
+
 {{>layouts/footer}}
