--- a/src/main/resources/templates/articles/show.mustache
+++ b/src/main/resources/templates/articles/show.mustache
@@ -1,4 +1,5 @@
 {{>layouts/header}}
+
 <table class="table">
     <thead>
     <tr>
@@ -17,4 +18,7 @@
     {{/article}}
     </tbody>
 </table>
+
+<a href="/articles">Go to Article List</a>
+
 {{>layouts/footer}}
