--- a/src/main/resources/templates/members/show.mustache
+++ b/src/main/resources/templates/members/show.mustache
@@ -1,4 +1,5 @@
 {{>layouts/header}}
+
 <table class="table">
     <thead>
     <tr>
@@ -17,4 +18,6 @@
     {{/member}}
     </tbody>
 </table>
+<a href="/members">Go to member list</a>
+
 {{>layouts/footer}}
