--- a/src/main/resources/templates/members/show.mustache
+++ b/src/main/resources/templates/members/show.mustache
@@ -18,6 +18,7 @@
     {{/member}}
     </tbody>
 </table>
+<a href="/members/{{member.id}}/edit" class="btn btn-primary">edit</a>
 <a href="/members">Go to member list</a>
 
 {{>layouts/footer}}
