--- a/src/main/resources/templates/members/show.mustache
+++ b/src/main/resources/templates/members/show.mustache
@@ -19,6 +19,7 @@
     </tbody>
 </table>
 <a href="/members/{{member.id}}/edit" class="btn btn-primary">edit</a>
+<a href="/members/{{member.id}}/delete" class="btn btn-danger">delete</a>
 <a href="/members">Go to member list</a>
 
 {{>layouts/footer}}
